--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,19 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
 }
-
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+span {
+	font-family: 'Titillium Web', sans-serif;
+}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	* {
+		font-family: 'Titillium Web', sans-serif;
+	}
 }
