--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -12,7 +12,8 @@ $confirmation-green: #4ebf62;
 $confirmation-green-hover: rgb(35, 184, 40);
 
 // Shades
-$primary-black: #585858;
+$primary-black: #606060;
+// $primary-black: #585858;
 $primary-grey: rgb(100, 100, 100);
 $primary-grey-hover: rgba(100, 100, 100, 0.5);
 // $primary-black: #222;
