adds toggles to project page for filtering tasks

--- a/src/components/presentationalComponents/navigation/navigation.module.scss
+++ b/src/components/presentationalComponents/navigation/navigation.module.scss
@@ -142,7 +142,9 @@
 .ProjectLinkItem {
 	@include flex-center;
 	padding: 2px 0;
-
+	&[data-is-complete='1'] {
+		text-decoration: line-through;
+	}
 	svg {
 		font-size: 14px;
 		margin-left: 10px;
