--- a/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
+++ b/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
@@ -44,6 +44,19 @@
 				}
 				margin-right: 20px;
 			}
+
+			.GlobalHiddenBadge {
+				@include flex-center;
+
+				svg {
+					margin-right: 10px;
+					color: red;
+				}
+
+				&:hover {
+					cursor: pointer;
+				}
+			}
 			.CheckCircle {
 				@include flex-center-center;
 
