--- a/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
+++ b/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
@@ -1,7 +1,7 @@
 @import '../../../sass/';
 
 .Container {
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 	transition: 0.2s;
 	position: relative;
 
@@ -11,7 +11,7 @@
 		position: inherit;
 
 		justify-content: space-between;
-		margin-bottom: 20px;
+		margin-bottom: 5px;
 		color: $primary-black;
 
 		.HeaderLeft {
@@ -20,13 +20,52 @@
 
 			h2 {
 				margin: 0;
+				font-size: 18px;
 			}
 
-			svg {
-				margin-left: 10px;
+			.EditIcon {
+				margin-left: 7px;
 
 				&:hover {
 					cursor: pointer;
+				}
+			}
+
+			.EditWrapper {
+				@include flex-center-center;
+				width: 30px;
+				height: 30px;
+				opacity: 0;
+				transition: 0.13s;
+
+				svg {
+					font-size: 13px;
+				}
+			}
+
+			&:hover {
+				cursor: pointer;
+
+				.EditWrapper {
+					opacity: 1;
+				}
+			}
+
+			.CheckCircle {
+				@include flex-center-center;
+
+				width: 30px;
+				height: 30px;
+				margin-right: 5px;
+				transition: 0.15;
+				svg {
+					font-size: 28px;
+					padding-right: 1px;
+				}
+
+				&:hover {
+					cursor: pointer;
+					transform: scale(1.04);
 				}
 			}
 		}
@@ -54,21 +93,6 @@
 				svg {
 					margin-right: 10px;
 					color: red;
-				}
-
-				&:hover {
-					cursor: pointer;
-				}
-			}
-			.CheckCircle {
-				@include flex-center-center;
-
-				width: 30px;
-				height: 30px;
-
-				svg {
-					font-size: 28px;
-					padding-right: 1px;
 				}
 
 				&:hover {
@@ -129,7 +153,7 @@
 			height: 0;
 			overflow: hidden;
 			flex-direction: column;
-			transition: 0.25s;
+			transition: 0.18s;
 			z-index: 899;
 
 			.FormWrapper {
