--- a/src/pages/dashSubViews/shared.module.scss
+++ b/src/pages/dashSubViews/shared.module.scss
@@ -4,19 +4,22 @@
 	@include no-select;
 	height: 100vh;
 	overflow-y: scroll;
-
 	padding: 0 30px 0 0;
 	.HeaderWrapper {
-		border-bottom: 1px solid $primary-black;
 		margin-bottom: 20px;
-		padding: 20px 0;
+		padding: 20px 0 0 0;
 
 		.TitleWrapper {
 			@include flex-center;
 			margin-bottom: 10px;
 			h1 {
 				margin: 0;
+				color: $primary-black;
 			}
+		}
+
+		.BubbleBlock {
+			display: flex;
 		}
 		.Archive {
 			@include flex-center;
