create util function for spotting clicks outside an element, applies to all forms to close when outclicking

--- a/src/components/presentationalComponents/navigation/navigation.module.scss
+++ b/src/components/presentationalComponents/navigation/navigation.module.scss
@@ -28,6 +28,11 @@
 			height: 85vh;
 			overflow-y: scroll;
 
+			.FormWrapper {
+				width: 100%;
+				padding: 0px 25px !important;
+			}
+
 			width: 100%;
 		}
 	}
