--- a/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
+++ b/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
@@ -1,9 +1,13 @@
 @import '../../../sass/';
 
 .Container {
-	margin-bottom: 10px;
-	transition: 0.2s;
+	margin-bottom: 2px;
+	transition: 0.175s;
+	transition-timing-function: ease-in-out;
 	position: relative;
+	padding: 5px 15px 10px 15px;
+	border-radius: $small-radius;
+	transform: scaleY(1);
 
 	.BlockHeader {
 		@include flex-center;
@@ -11,7 +15,7 @@
 		position: inherit;
 
 		justify-content: space-between;
-		margin-bottom: 5px;
+		padding: 5px 0;
 		color: $primary-black;
 
 		.HeaderLeft {
@@ -71,7 +75,7 @@
 		}
 
 		.HeaderRight {
-			@include flex-center;
+			@include flex-center-center;
 
 			p {
 				margin: 0;
@@ -92,7 +96,7 @@
 
 				svg {
 					margin-right: 10px;
-					color: red;
+					color: rgba(219, 26, 26, 0.952);
 				}
 
 				&:hover {
@@ -147,7 +151,7 @@
 		.InputWrapper {
 			@include flex-center-center;
 			$height: 45px;
-			margin: 8px 0 15px 0px;
+			margin: 8px 0 0px 0px;
 			position: relative;
 
 			height: 0;
