--- a/src/pages/dashSubViews/shared.module.scss
+++ b/src/pages/dashSubViews/shared.module.scss
@@ -4,7 +4,7 @@
 	@include no-select;
 	height: 100vh;
 	overflow-y: scroll;
-	padding: 0 30px 0 0;
+	padding: 0 30px 0 5px;
 	.HeaderWrapper {
 		margin-bottom: 20px;
 		padding: 20px 0 0 0;
