--- a/src/components/presentationalComponents/statusList/statusListItem/statusListItem.module.scss
+++ b/src/components/presentationalComponents/statusList/statusListItem/statusListItem.module.scss
@@ -2,7 +2,7 @@
 
 .Container {
 	justify-content: space-between;
-	padding: 0px 10px;
+	padding: 0px 20px 0 10px;
 	height: $status-li-height;
 	position: relative;
 
