--- a/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
+++ b/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
@@ -5,9 +5,13 @@
 	transition: 0.175s;
 	transition-timing-function: ease-in-out;
 	position: relative;
-	padding: 5px 15px 10px 15px;
+	padding: 5px 15px 5px 15px;
 	border-radius: $small-radius;
 	transform: scaleY(1);
+
+	&:hover {
+		@include light-hover;
+	}
 
 	.BlockHeader {
 		@include flex-center;
@@ -22,6 +26,30 @@
 			@include flex-center;
 			position: relative;
 
+			.CheckCircle {
+				@include flex-center-center;
+				margin-right: 5px;
+				transition: 0.15;
+
+				svg {
+					font-size: 32px;
+					color: $pallet-color-two;
+					padding-right: 1px;
+				}
+
+				&:hover {
+					cursor: pointer;
+					transform: scale(1.04);
+				}
+			}
+		}
+
+		.HeaderCenter {
+			@include flex-center;
+
+			width: 100%;
+			position: relative;
+
 			h2 {
 				margin: 0;
 				font-size: 18px;
@@ -34,7 +62,6 @@
 					cursor: pointer;
 				}
 			}
-
 			.EditWrapper {
 				@include flex-center-center;
 				width: 30px;
@@ -52,24 +79,6 @@
 
 				.EditWrapper {
 					opacity: 1;
-				}
-			}
-
-			.CheckCircle {
-				@include flex-center-center;
-
-				width: 30px;
-				height: 30px;
-				margin-right: 5px;
-				transition: 0.15;
-				svg {
-					font-size: 28px;
-					padding-right: 1px;
-				}
-
-				&:hover {
-					cursor: pointer;
-					transform: scale(1.04);
 				}
 			}
 		}
@@ -93,7 +102,9 @@
 
 			.GlobalHiddenBadge {
 				@include flex-center;
-
+				p {
+					white-space: nowrap;
+				}
 				svg {
 					margin-right: 10px;
 					color: rgba(219, 26, 26, 0.952);
@@ -117,9 +128,13 @@
 			text-decoration: line-through;
 		}
 
-		.CheckCircle {
-			svg {
-				color: $confirmation-green;
+		.BlockHeader {
+			.HeaderLeft {
+				.CheckCircle {
+					svg {
+						color: $confirmation-green;
+					}
+				}
 			}
 		}
 	}
