--- a/src/pages/dashSubViews/shared.module.scss
+++ b/src/pages/dashSubViews/shared.module.scss
@@ -11,10 +11,21 @@
 
 		.TitleWrapper {
 			@include flex-center;
+			@include hover-cursor;
 			margin-bottom: 10px;
 			h1 {
 				margin: 0;
 				color: $primary-black;
+			}
+
+			svg {
+				opacity: 0;
+			}
+
+			&:hover {
+				svg {
+					opacity: 1;
+				}
 			}
 		}
 
