--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -52,9 +52,10 @@ $pallet-color-one-hover: #558acbb2;
 // $pallet-color-one-hover: #3161d1;
 // $pallet-color-two: #2085e3;
 $pallet-color-two: #6584cd;
+$pallet-color-two-hover: #6584cd3f;
+$pallet-color-two-pale: #558acb17;
 // $pallet-color-two: #012d94;
 
-$pallet-color-two-hover: #0738aa;
 $pallet-color-three: #5e7ce2;
 $pallet-color-three-hover: #5e7de2c0;
 $pallet-color-four: #329aa7;
