--- a/src/components/genericComponents/utilityButtons/bubbleToggle/bubbleToggle.module.scss
+++ b/src/components/genericComponents/utilityButtons/bubbleToggle/bubbleToggle.module.scss
@@ -1,10 +1,12 @@
 @import '../../../../sass';
 
 .Container {
+	@include hover-cursor;
 	border: 1px solid $pallet-color-two;
-	border-radius: $small-radius;
+	border-radius: $large-radius;
 	padding: 4px 10px;
 	transition: 0.2s;
+	opacity: 1;
 
 	&[data-margin='1'] {
 		margin: 0 5px 5px 0;
@@ -44,8 +46,18 @@
 		height: 30px !important;
 		padding: 0;
 	}
-
-	&:hover {
-		cursor: pointer;
+	&[data-icon='0'] {
+		&:hover {
+			&[data-active='1'] {
+				opacity: 0.8;
+			}
+			&[data-active='0'] {
+				@include focus-hover;
+				p,
+				svg {
+					color: $primary-black;
+				}
+			}
+		}
 	}
 }
