--- a/src/components/presentationalComponents/navigation/projectLink/taskLink/taskLink.module.scss
+++ b/src/components/presentationalComponents/navigation/projectLink/taskLink/taskLink.module.scss
@@ -25,6 +25,7 @@
 
 	&[data-is-complete='1'] {
 		text-decoration: line-through;
+		opacity: 0.5;
 	}
 
 	svg {
@@ -36,5 +37,6 @@
 .Flash {
 	// transform: scale(1.008) !important;
 	// background-color: rgba(207, 63, 207, 0.14);
-	box-shadow: 0 0 0 3px rgba(104, 172, 235, 0.65);
+	// box-shadow: 0 0 0 3px rgba(104, 172, 235, 0.65);
+	@include attention-flash;
 }
