--- a/src/sass/mixins/_utility.scss
+++ b/src/sass/mixins/_utility.scss
@@ -1,16 +1,30 @@
 @import '../variables/';
 
 @mixin light-hover {
-	background-color: rgb(248, 248, 248) !important;
-	box-shadow: $hover-inset !important;
+	background-color: rgb(248, 248, 248);
+	box-shadow: $hover-inset;
 }
 @mixin light-hover-two {
-	background-color: rgba(244, 244, 244, 0.76) !important;
-	box-shadow: inset 1px 1px 6px rgba(192, 192, 192, 0.5) !important;
+	background-color: rgba(244, 244, 244, 0.76);
+	box-shadow: inset 1px 1px 6px rgba(192, 192, 192, 0.5);
+}
+
+@mixin attention-flash {
+	box-shadow: inset 1px 1px 8px rgba(192, 192, 192, 0.9) !important;
+	background-color: $pallet-color-two-hover !important;
 }
 
 @mixin hover-shadow {
 	box-shadow: 2px 2px 5px rgba(38, 38, 38, 0.08) !important;
+}
+
+@mixin focus-hover {
+	box-shadow: inset 1px 1px 8px rgba(192, 192, 192, 0.4) !important;
+	background-color: $pallet-color-two-pale !important;
+}
+
+@mixin hover-outline {
+	box-shadow: 0 0 0 1px $pallet-color-two-hover;
 }
 
 @mixin card-image-radius {
