--- a/src/components/genericComponents/modals/modal/modal.module.scss
+++ b/src/components/genericComponents/modals/modal/modal.module.scss
@@ -3,11 +3,11 @@
 .ChildrenWrapper {
 	@include remove-scrollbar;
 	position: relative !important;
-	padding: 50px 30px !important;
+	padding: 50px 30px 0 30px !important;
 	border-radius: 0 !important;
 	max-height: unset !important;
 	top: 0 !important;
-	height: 100vh !important;
+	height: 90vh !important;
 
 	.IconWrapper {
 		position: absolute;
