--- a/src/components/presentationalComponents/navigation/navigation.module.scss
+++ b/src/components/presentationalComponents/navigation/navigation.module.scss
@@ -2,6 +2,9 @@
 
 .MainWrapper {
 	@include vertical-gradient;
+	@include no-select;
+	@include hover-cursor;
+
 	height: 100vh;
 	position: relative;
 
@@ -13,6 +16,7 @@
 
 	.MenuWrapper {
 		@include flex-col-start;
+
 		height: 90vh;
 		position: relative;
 		padding: 30px 0px 70px 0px;
@@ -24,181 +28,27 @@
 
 		.ProjectLinks {
 			@include remove-scrollbar;
-			padding: 20px 0;
+
 			height: 85vh;
+			width: 100%;
+			padding: 20px 0;
 			overflow-y: scroll;
 
 			.FormWrapper {
 				width: 100%;
 				padding: 0px 25px !important;
 			}
-
-			width: 100%;
-		}
-	}
-
-	.UserDrop {
-		@include flex-center;
-		height: 10vh;
-		justify-content: center;
-		position: relative;
-	}
-}
-
-.UserMenuTrigger {
-	@include flex-center-center;
-	@include full-size;
-
-	.Trigger {
-		@include flex-center-center;
-		@include full-size;
-
-		z-index: 1000;
-
-		svg {
-			font-size: 40px;
-		}
-
-		img {
-			width: 40px;
-		}
-
-		img,
-		svg {
-			margin-right: 10px;
-		}
-
-		p {
-			font-size: 18px;
-		}
-	}
-
-	.TriggerMenuWrapper {
-		width: 100%;
-		position: absolute;
-		z-index: 999;
-
-		transition: 0.3s;
-		transition-timing-function: ease-in;
-
-		opacity: 0;
-		transform: translateY(10px);
-	}
-
-	@keyframes enter-menu {
-		0% {
-			opacity: 0;
-			transform: translateY(10px);
-		}
-		100% {
-			opacity: 1;
-			transform: translateY(0px);
-		}
-	}
-
-	&:hover {
-		cursor: pointer;
-		.TriggerMenuWrapper {
-			bottom: 100%;
-			animation: enter-menu;
-			animation-duration: 0.2s;
-			animation-timing-function: ease-in;
-			animation-fill-mode: forwards;
-			animation-iteration-count: initial;
 		}
 	}
 }
 
-.UserMenuTriggerItem {
-	@include flex-center-center;
-
-	padding: 2px 10px;
-	p {
-		margin: 0;
-		font-size: 16px;
-	}
-}
-
-.ExpandLink,
 .RootLink {
 	font-size: 25px;
+	font-weight: 600;
 	margin-bottom: 8px !important;
 
 	p {
 		padding: 5px 0px;
 		margin: 0;
-	}
-}
-
-.RootLink {
-	font-weight: 600;
-}
-
-.ExpandLink {
-	padding: 0 10px;
-
-	.Title {
-		padding: 0 15px;
-		border-radius: $small-radius;
-		transition: 0.14s;
-	}
-	&[data-active='1'] {
-		.Title {
-			padding: 5px 15px;
-			background-color: rgba(255, 255, 255, 0.15);
-		}
-	}
-
-	&:hover {
-		.Title {
-			background-color: rgba(255, 255, 255, 0.15);
-		}
-	}
-
-	.ExpandLinkChildren {
-		transition: 0.15s;
-		transition-timing-function: ease-in-out;
-		overflow-y: scroll;
-
-		@include remove-scrollbar;
-
-		p {
-			padding: 0;
-			margin-bottom: 2px;
-			font-size: 16px;
-		}
-	}
-}
-
-.ProjectLinkItem {
-	@include flex-center;
-	padding: 2px 0;
-	overflow: visible;
-
-	&[data-is-complete='1'] {
-		text-decoration: line-through;
-	}
-	position: relative;
-
-	svg {
-		font-size: 14px;
-		margin-right: 7px;
-	}
-}
-
-.MainWrapper,
-.UserMenuTrigger,
-.UserMenuTriggerItem,
-.ExpandLink,
-.RootLink {
-	@include no-select;
-}
-
-.UserMenuTrigger,
-.UserMenuTriggerItem,
-.ExpandLink,
-.RootLink {
-	&:hover {
-		cursor: pointer;
 	}
 }
