--- a/src/pages/dashSubViews/shared.module.scss
+++ b/src/pages/dashSubViews/shared.module.scss
@@ -2,9 +2,12 @@
 
 .ViewWrapper {
 	@include no-select;
+	@include remove-scrollbar;
+
 	height: 100vh;
 	overflow-y: scroll;
 	padding: 0 30px 0 5px;
+
 	.HeaderWrapper {
 		margin-bottom: 20px;
 		padding: 20px 0 0 0;
@@ -12,6 +15,7 @@
 		.TitleWrapper {
 			@include flex-center;
 			@include hover-cursor;
+
 			margin-bottom: 10px;
 			h1 {
 				margin: 0;
