--- a/src/components/presentationalComponents/navigation/navigation.module.scss
+++ b/src/components/presentationalComponents/navigation/navigation.module.scss
@@ -17,9 +17,9 @@
 	.MenuWrapper {
 		@include flex-col-start;
 
-		height: 90vh;
+		height: 100vh;
 		position: relative;
-		padding: 30px 0px 70px 0px;
+		padding: 30px 0 0 0;
 
 		.MenuTop {
 			height: 5vh;
@@ -29,7 +29,7 @@
 		.ProjectLinks {
 			@include remove-scrollbar;
 
-			height: 85vh;
+			height: 90vh;
 			width: 100%;
 			padding: 20px 0;
 			overflow-y: scroll;
