--- a/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
+++ b/src/components/presentationalComponents/taskBlock/taskBlock.module.scss
@@ -1,8 +1,11 @@
 @import '../../../sass/';
 
 .Container {
-	@include light-hover;
-	margin-bottom: 6px;
+	// @include light-hover;
+	// background-color: rgba(235, 235, 235, 0.85); //
+
+	background-color: rgba(240, 240, 240, 0.5);
+	margin-bottom: 13px;
 	transition: 0.175s;
 	transition-timing-function: ease-in-out;
 	position: relative;
@@ -11,7 +14,6 @@
 	transform: scaleY(1);
 
 	&:hover {
-		// transform: scaleY(1.04);
 		@include focus-hover;
 	}
 
@@ -51,19 +53,22 @@
 
 			h2 {
 				@include hover-cursor;
+				font-weight: 600;
 				margin: 5px 0 5px 10px;
 				font-size: 18px;
 			}
 
 			.EditIcon {
 				@include hover-cursor;
+
 				margin-left: 7px;
 			}
 
 			.EditWrapper,
 			.LabelWrapper {
-				opacity: 0;
 				@include flex-center-center;
+
+				opacity: 0;
 				width: 30px;
 				height: 30px;
 				opacity: 0;
